event page created

--- a/config.json
+++ b/config.json
@@ -5,7 +5,14 @@
             "enabled": true
         },
         "event": {
-            "enabled": true
+            "enabled": true,
+            "extendedAttributes": [
+                {
+                    "name": "additional_label",
+                    "label": "Additional Label",
+                    "type": "inputbox"
+                }
+            ]
         },
         "blog": {
             "routes": {
