--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@cloudinary/base": "^1.0.0-beta.1",
     "cypress": "^8.2.0",
+    "gulp-cli": "^2.3.0",
     "handlebars": "^4.7.7",
     "lazyload": "^2.0.0-rc.2"
   },
