--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@cloudinary/base": "^1.0.0-beta.1",
     "cypress": "^8.2.0",
     "gulp-cli": "^2.3.0",
+    "gulp-install": "^1.1.0",
     "handlebars": "^4.7.7",
     "lazyload": "^2.0.0-rc.2"
   },
