--- a/config.json
+++ b/config.json
@@ -68,6 +68,121 @@
                         "cropped": "Cropped",
                         "full": "Full"
                     }
+                },
+                {
+                    "name": "map",
+                    "label": "Google Maps embed code",
+                    "type": "inputbox"
+                },
+                {
+                    "name": "contactcompany",
+                    "label": "Company",
+                    "type": "inputbox"
+                },
+                {
+                    "name": "contactname",
+                    "label": "Contact name",
+                    "type": "inputbox"
+                },
+                {
+                    "name": "contactemail",
+                    "label": "Contact email",
+                    "type": "inputbox"
+                },
+                {
+                    "name": "contactphone",
+                    "label": "Contact phone",
+                    "type": "inputbox"
+                },
+                {
+                    "name": "contactimage",
+                    "label": "Contact image url",
+                    "type": "inputbox"
+                },
+                {
+                    "name": "inspection_date",
+                    "label": "Next inspection date and time",
+                    "type": "inputbox",
+                    "datetimepicker": true
+                },
+                {
+                    "name": "pricerange",
+                    "label": "Price",
+                    "type": "inputbox"
+                },
+                {
+                    "name": "listing_type",
+                    "label": "Listing Type",
+                    "type": "dropdown",
+                    "options": {
+                        "rent": "Rent",
+                        "buy": "Buy"
+                    }
+                },
+                {
+                    "name": "bedroom_count",
+                    "label": "Number of bedrooms",
+                    "type": "inputbox"
+                },
+                {
+                    "name": "bathroom_count",
+                    "label": "Number of bathrooms",
+                    "type": "inputbox"
+                },
+                {
+                    "name": "car_count",
+                    "label": "Number of car spaces",
+                    "type": "inputbox"
+                },
+                {
+                    "name": "sq_meters",
+                    "label": "Square meters",
+                    "type": "inputbox"
+                },
+                {
+                    "name": "features",
+                    "label": "Features (comma separated)",
+                    "type": "inputbox"
+                },
+                {
+                    "name": "link_1_text",
+                    "label": "Link one text",
+                    "type": "inputbox"
+                },
+                {
+                    "name": "link_1_url",
+                    "label": "Link one url",
+                    "type": "inputbox"
+                },
+                {
+                    "name": "link_2_text",
+                    "label": "Link two text",
+                    "type": "inputbox"
+                },
+                {
+                    "name": "link_2_url",
+                    "label": "Link two url",
+                    "type": "inputbox"
+                },
+                {
+                    "name": "link_3_text",
+                    "label": "Link three text",
+                    "type": "inputbox"
+                },
+                {
+                    "name": "link_3_url",
+                    "label": "Link three url",
+                    "type": "inputbox"
+                },
+                {
+                    "name": "link_4_text",
+                    "label": "Link four text",
+                    "type": "inputbox"
+                },
+                {
+                    "name": "link_4_url",
+                    "label": "Link four url",
+                    "type": "inputbox"
                 }
             ]
         }
