--- a/package.json
+++ b/package.json
@@ -39,5 +39,9 @@
     "sass": "^1.37.5",
     "webpack": "^5.49.0",
     "webpack-cli": "^4.7.2"
-  }
+  },
+  "browserslist": [
+    "last 2 Chrome versions"
+  ]
+
 }
